--- a/pages/ubl/debit-note.mdx
+++ b/pages/ubl/debit-note.mdx
@@ -12,7 +12,7 @@ The following table outlines the fields included in a UBL (Universal Business La
 |[cac:AccountingCustomerParty](./invoice/accounting-customer-party.mdx) |	[1..1] |	Party to whom the goods or services are supplied.
 |[cac:AllowanceCharge](./invoice/allowance-charge.mdx) |	[1..n] |	Total tax amount for the invoice.
 |[cac:TaxExchangeRate](./invoice/tax-exchange-rate.mdx) |	[0..1] |	Exchange rate applied for tax calculation in invoices involving conversion, mandatory if document currency is not Khmer Riel(KHR).
-|[cac:TaxTotal](./invoice/tax-total.mdx) |	[1..n] |	Total tax amount for the invoice.
+|[cac:TaxTotal](./invoice/tax-total.mdx) |	[1..1] |	Total tax amount for the invoice.
 |[cac:LegalMonetaryTotal](./invoice/legal-monetary-total.mdx) | [1..1] |	Total amounts for the invoice.
 |[cac:InvoiceLine](./invoice/invoice-line.mdx) |	[1..n] |	Each individual line item of the invoice.
 
