Add cancel reject document

--- a/pages/document/document-list.mdx
+++ b/pages/document/document-list.mdx
@@ -16,7 +16,7 @@ Bearer token authentication is required with the access token provided.
 | type             | String  | The type of documents to retrieve. Possible values: 'received' or 'send'. | 'send'    |
 | page             | Integer | The page number for pagination.                          | 1         |
 | size             | Integer | The number of documents per page.                        | 20        |
-| document_type    | String  | The [type of document](/document-type) to retrieve. Default is "INVOICE".  | "INVOICE" |
+| document_type    | String  | The [type of document](/data-type/document-type) to retrieve. Default is "INVOICE".  | "INVOICE" |
 
 ## Responses
 
