--- a/pages/invoice-structure/invoice/accounting-customer-party/party/party-legal-entity/registration-name.mdx
+++ b/pages/invoice-structure/invoice/accounting-customer-party/party/party-legal-entity/registration-name.mdx
@@ -1,7 +1,7 @@
 
 # cbc:RegistrationName
 
-The name of the party as registered with the relevant legal authority.
+The name of the party as registered with the relevant legal authority (MOC).
 
 ## About
 
