--- a/pages/invoice-structure/invoice/accounting-customer-party/party/party-name/name.mdx
+++ b/pages/invoice-structure/invoice/accounting-customer-party/party/party-name/name.mdx
@@ -1,10 +1,10 @@
 # cbc:Name
 
-A name for this party.
+A name for this party. In our case, the business's khmer name.                   
 
 ## About
 
-- Occurrence: [0..1]
+- Occurrence: [1..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -16,4 +16,4 @@ A name for this party.
 ## Example
 
 ```xml
-<cbc:Name>Company Name</cbc:Name>
+<cbc:Name>ក្រុមហ៊ុន ក</cbc:Name>
