--- a/pages/invoice-structure/invoice/accounting-customer-party/party/party-tax-scheme/company-id.mdx
+++ b/pages/invoice-structure/invoice/accounting-customer-party/party/party-tax-scheme/company-id.mdx
@@ -1,6 +1,6 @@
 # cbc:CompanyID
 
-An identifier for the party assigned for tax purposes by the taxation authority.
+An identifier for the party assigned for tax purposes by the taxation authority. In our case, VAT Tax Identification Number (VATTIN).
 
 ## About
 
