--- a/pages/invoice-structure/invoice/document-currency-code.mdx
+++ b/pages/invoice-structure/invoice/document-currency-code.mdx
@@ -1,6 +1,7 @@
 # cbc:DocumentCurrencyCode
 An identifier representing the default currency for this document, selected from the [ISO 4217 code list](https://www.iban.com/currency-codes).
 
+Example: 'KHR', 'USD'.
 ## About
 * Occurrence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
