--- a/pages/invoice-structure/invoice/invoice-line/line-extension-amount.mdx
+++ b/pages/invoice-structure/invoice/invoice-line/line-extension-amount.mdx
@@ -1,6 +1,6 @@
 # cbc:LineExtensionAmount
 
-The monetary amount of an extended transaction line, net of tax and settlement discounts, but inclusive of any applicable rounding amount.
+The monetary amount of an item, including its charges and discounts. This amount does not include tax.
 
 ## About
 
