--- a/pages/invoice-structure/invoice/invoice-line/tax-total.mdx
+++ b/pages/invoice-structure/invoice/invoice-line/tax-total.mdx
@@ -1,5 +1,5 @@
 # cac:TaxTotal
-The aggregate tax amount for a specific taxation scheme.
+The aggregate tax amount for each specific taxation scheme.
 
 ## About
 * Occurrence: [0..n]
