--- a/pages/invoice-structure/invoice/invoice-type-code.mdx
+++ b/pages/invoice-structure/invoice/invoice-type-code.mdx
@@ -1,5 +1,8 @@
 # cbc:InvoiceTypeCode
-A code indicating the type of the invoice. As tax invoices are currently the only type in use, this field is optional.
+A code indicating the type of the invoice. Currently, there are 4 types of InvoiceTypeCode:
+- 380 - Commercial Invoice
+- 388 - Tax Invoice
+
 ## About
 * Occurence: [0..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
