--- a/pages/invoice-structure/invoice/tax-exchange-rate/calculation-rate.mdx
+++ b/pages/invoice-structure/invoice/tax-exchange-rate/calculation-rate.mdx
@@ -1,7 +1,7 @@
 
 # cbc:CalculationRate
 
-The factor/rate applied to the source currency to calculate the target currency.
+The factor/rate applied to the source currency to calculate the target currency. The rate must be taken from the National Bank of Cambodia (NBC).
 
 ## About
 
