--- a/pages/invoice-structure/invoice/accounting-supplier-party/party/party-legal-entity/company-id.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party/party/party-legal-entity/company-id.mdx
@@ -1,6 +1,6 @@
 # cbc:CompanyID
 
-An identifier for the party as registered within a company registration scheme.
+An identifier for the party as registered within a company registration scheme. In our case, this would be the Ministry of Commerce (MOC) Single ID.
 
 ## About
 
@@ -12,4 +12,4 @@ An identifier for the party as registered within a company registration scheme.
 ## Example
 
 ```xml
-<cbc:CompanyID>123456</cbc:CompanyID>
+<cbc:CompanyID>000001234</cbc:CompanyID>
