--- a/pages/invoice-structure/invoice/accounting-supplier-party/party/party-tax-scheme/tax-scheme.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party/party/party-tax-scheme/tax-scheme.mdx
@@ -1,5 +1,5 @@
 # cac:TaxScheme
-Element information for a taxation scheme.
+Element information for a taxation scheme. For our case, it should be VAT.
 
 ## About
 * Occurrence: [1..1]
