--- a/pages/invoice-structure/invoice/accounting-supplier-party/party/postal-address/country/identification-code.mdx
+++ b/pages/invoice-structure/invoice/accounting-supplier-party/party/postal-address/country/identification-code.mdx
@@ -13,4 +13,4 @@ A code signifying this country.
 ## Example
 
 ```xml
-<cbc:IdentificationCode>US</cbc:IdentificationCode>
+<cbc:IdentificationCode>KH</cbc:IdentificationCode>
