--- a/pages/invoice-structure/invoice/invoice-line/allowance-charge.mdx
+++ b/pages/invoice-structure/invoice/invoice-line/allowance-charge.mdx
@@ -1,5 +1,5 @@
 # cac:AllowanceCharge
-The conditions and amounts associated with an allowance or charge.
+The conditions and amounts associated with an allowance or charge at the line level. This allowance or charge should not be included in the total allowance charges at the document level.
 
 ## About
 * Occurrence: [0..1]
@@ -12,7 +12,6 @@ The conditions and amounts associated with an allowance or charge.
 | [cbc:ChargeIndicator](./allowance-charge/charge-indicator.mdx)      |   [1..1]   | An indicator that this AllowanceCharge describes a charge (true) or a discount (false). |
 | [cbc:AllowanceChargeReason](./allowance-charge/allowance-charge-reason.mdx)         | [0..*] | The reason for this allowance or charge. |
 | [cbc:Amount](./allowance-charge/amount.mdx)                                       | [1..1] | The monetary amount of this allowance or charge to be applied. |
-| [cac:TaxTotal](./allowance-charge/tax-total.mdx)                                   | [0..1] | The total of all the taxes applicable to this allowance or charge. |
 
 ## Example
 ```xml
