--- a/pages/api-reference/submit-document.mdx
+++ b/pages/api-reference/submit-document.mdx
@@ -29,7 +29,7 @@ Bearer token authentication is required with the access token provided.
 | Field          | Type     | Description                                             |
 |----------------|----------|---------------------------------------------------------|
 | documents      | Array    | An array containing document details.                    |
-| document_type  | String   | The [type of document](/document-type) being submitted.                |
+| document_type  | String   | The [type of document](/data-type/document-type) being submitted.                |
 | document       | String   | The UBL xml content document encoded as a Base64 string.                |
 ### Example Request Body
 
