--- a/pages/invoice-structure/debit-note.mdx
+++ b/pages/invoice-structure/debit-note.mdx
@@ -1,5 +1,14 @@
 # UBL Debit Note
-The following table outlines the fields included in a UBL (Universal Business Language) debit note, their occurrence, their examples, and their definitions.
+
+The table below presents the essential fields required for a UBL (Universal Business Language) debit note. These fields conform to the structure defined in UBL 2.1 Debit Note. It provides details such as occurrence, examples, and definitions of each field. Only relevant and mandatory fields for the General Department of Taxation (GDT), as well as commonly used fields, are included.
+
+Ensure that when creating and submitting your document, the fields are listed in the exact sequential order as below.
+
+Reference:
+* [UBL 2.1 Debit Note Schema](https://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/maindoc/UBL-DebitNote-2.1.xsd)
+* [UBL 2.1 Common Schema](https://docs.oasis-open.org/ubl/os-UBL-2.1/xsd/common/) 
+* [UBL 2.1 Debit Note Documentation](http://www.datypic.com/sc/ubl21/s-UBL-DebitNote-2.1.xsd.html) 
+
 ## Core Invoice Fields Definition
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
