--- a/pages/api-reference/submit-document.mdx
+++ b/pages/api-reference/submit-document.mdx
@@ -1,11 +1,11 @@
 
-# API Endpoint Documentation: `/api/v1/document`
+# Submit Document
 
 ## Description
 This endpoint is used to submit documents for processing.
 
 ```http
-POST {BaseURL}/api/v1/service-providers/connect
+POST {BaseURL}/api/v1/document
 Content-Type: application/json
 
 {
