--- a/pages/api-reference/validate-taxpayer.mdx
+++ b/pages/api-reference/validate-taxpayer.mdx
@@ -1,4 +1,4 @@
-# API Endpoint Documentation: `/api/v1/taxpayer/validate`
+# Validate Tax Payer
 
 ## Description
 This endpoint is used to validate taxpayer information.
