--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -13,7 +13,7 @@ This technical documentation provides all the necessary information needed to in
 - [Getting Started](./getting-started/getting-start): A guide to help you begin your integration with CamInvoice.
 - [API Reference](./document/authentication): Detailed information about our API endpoints.
 - [Invoice Structure](./ubl): Specifications on the required formats for invoices and debit/credit notes.
-- [Webhooks](./webhooks): Information on how to configure and use webhooks for receiving notifications.
+- [Receive Update Event](./receive-update-event): Information on how to configure and use webhooks for receiving notifications.
 - [Document Type](./document-type): Details on the various document types supported by CamInvoice.
 
 ## How it works
