--- a/pages/api-reference/authentication.mdx
+++ b/pages/api-reference/authentication.mdx
@@ -1,4 +1,4 @@
-# API Endpoint Documentation: `/api/v1/token`
+# Getting Access Toking
 
 ## Description
 This endpoint is used to obtain a token for authentication.
@@ -8,7 +8,7 @@ import {Callout, Bleed} from 'nextra-theme-docs'
 
 
 ```http
-POST {BaseURL}/api/v1/token
+POST {BaseURL}/api/v1/auth/token
 Content-Type: application/json
 Authorization: Basic {encodedClientId:clientSecret}
 {
