--- a/pages/api-reference/caminvoice-member-list.mdx
+++ b/pages/api-reference/caminvoice-member-list.mdx
@@ -1,4 +1,4 @@
-# API Endpoint Documentation: `/api/v1/taxpayer/validate`
+# CamInvoice Member List
 
 ## Description
 This endpoint is used to validate taxpayer information.
