--- a/pages/receive-update-event/setting-up.mdx
+++ b/pages/receive-update-event/setting-up.mdx
@@ -5,7 +5,7 @@
 This endpoint allows you to configure a webhook to receive notifications for certain events.
 
 ```bash
-POST {baseUrl}/webhook/
+POST {baseUrl}/api/v1/configuration/configure-webhook
 Content-Type: application/json
 Authorization: Basic {encodedClientId:clientSecret}
 {
