--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,11 +10,11 @@ Our system is built with robust validation checks and compliance features, adher
 
 This technical documentation provides all the necessary information needed to integrate with our network, assuming you have already contacted us and received your credentials. The documentation is organized into the following sections:
 
-- [Getting Started](./getting-started/getting-start): A guide to help you begin your integration with CamInvoice.
-- [API Reference](./document/authentication): Detailed information about our API endpoints.
-- [Invoice Structure](./ubl): Specifications on the required formats for invoices and debit/credit notes.
+- [Getting Started](./getting-started/overview): A guide to help you begin your integration with CamInvoice.
+- [API Reference](./api-reference/authentication): Detailed information about our API endpoints.
+- [Invoice Structure](./invoice-structure): Specifications on the required formats for invoices and debit/credit notes.
 - [Receive Update Event](./receive-update-event): Information on how to configure and use webhooks for receiving notifications.
-- [Document Type](./document-type): Details on the various document types supported by CamInvoice.
+- [Document Type](./data-type/document-type): Details on the various document types supported by CamInvoice.
 
 ## How it works
 
