modify the example invoices

--- a/pages/invoice-structure/invoice/accounting-customer-party/party/party-name.mdx
+++ b/pages/invoice-structure/invoice/accounting-customer-party/party/party-name.mdx
@@ -1,5 +1,5 @@
 # cac:PartyName
-The name of the party.
+A name for this party. In our case, the business's khmer name.   
 
 ## About
 
@@ -15,6 +15,6 @@ The name of the party.
 
 ```xml 
 <cac:PartyName>
-    <cbc:Name>Company Kor</cbc:Name>
+    <cbc:Name>ក្រុមហ៊ុន ក</cbc:Name>
 </cac:PartyName>
 ```
