--- a/pages/invoice-structure/credit-note.mdx
+++ b/pages/invoice-structure/credit-note.mdx
@@ -26,96 +26,86 @@ Reference:
 
 ## Sample of UBL Invoice 
 ```xml
-<Invoice xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2" xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2">
+<?xml version="1.0" encoding="UTF-8"?>
+<CreditNote xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
+  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
+  xmlns="urn:oasis:names:specification:ubl:schema:xsd:CreditNote-2">
   <cbc:UBLVersionID>2.1</cbc:UBLVersionID>
-  <cbc:ID>24030192110</cbc:ID>
-  <cbc:IssueDate>2024-03-05</cbc:IssueDate>
-  <cbc:InvoiceTypeCode listID="UN/ECE 1001 Subset">388</cbc:InvoiceTypeCode>
-  <cbc:DocumentCurrencyCode>USD</cbc:DocumentCurrencyCode>
-  <cbc:BuyerReference>Phaney</cbc:BuyerReference>
+  <cbc:ID>CR-000001</cbc:ID>
+  <cbc:IssueDate>2024-06-08</cbc:IssueDate>
+  <cbc:CreditNoteTypeCode listID="UN/ECE 1001 Subset">381</cbc:CreditNoteTypeCode>
+  <cbc:Note>
+      Wrong number of item
+  </cbc:Note>
+  <cbc:DocumentCurrencyCode>KHR</cbc:DocumentCurrencyCode>
+  <cac:BillingReference>
+    <cac:InvoiceDocumentReference>
+      <cbc:ID>INV-0000002</cbc:ID>
+      <cbc:UUID>b29bf297-96bc-4268-9ff2-fb6e283e4eef</cbc:UUID>
+    </cac:InvoiceDocumentReference>
+  </cac:BillingReference>
   <cac:AccountingSupplierParty>
     <cac:Party>
       <cac:PartyName>
-        <cbc:Name>នាសារ៉ាថ្មី ឯ.ក</cbc:Name>
+        <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
       </cac:PartyName>
       <cac:PostalAddress>
-        <cbc:StreetName>PP</cbc:StreetName>
-        <cbc:AdditionalStreetName/>
-        <cbc:CityName>Phnom Penh</cbc:CityName>
-        <cbc:PostalZone/>
+        <cbc:StreetName>Battambong</cbc:StreetName>
+        <cbc:CityName>Battambang</cbc:CityName>
         <cac:Country>
           <cbc:IdentificationCode>KH</cbc:IdentificationCode>
         </cac:Country>
       </cac:PostalAddress>
       <cac:PartyTaxScheme>
-        <cbc:CompanyID>23144122</cbc:CompanyID>
+        <cbc:CompanyID>K008-0000002</cbc:CompanyID>
         <cac:TaxScheme>
           <cbc:ID>VAT</cbc:ID>
         </cac:TaxScheme>
       </cac:PartyTaxScheme>
       <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="en">NEASARANEW CO., LTD.</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
-      </cac:PartyLegalEntity>
-      <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="km">នាសារ៉ាថ្មី ឯ.ក</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
+        <cbc:RegistrationName>Angkar Battambong</cbc:RegistrationName>
+        <cbc:CompanyID>0005000002</cbc:CompanyID>
       </cac:PartyLegalEntity>
       <cac:Contact>
-        <cbc:Name>Phaney</cbc:Name>
-        <cbc:Telephone>65453322224</cbc:Telephone>
-        <cbc:ElectronicMail>phenpani@gmail.com</cbc:ElectronicMail>
+        <cbc:Telephone>+8550934534433</cbc:Telephone>
+        <cbc:ElectronicMail>angkar_battambong@gmail.com</cbc:ElectronicMail>
       </cac:Contact>
     </cac:Party>
   </cac:AccountingSupplierParty>
   <cac:AccountingCustomerParty>
     <cac:Party>
       <cac:PartyName>
-        <cbc:Name>នាសារ៉ាថ្មី ឯ.ក</cbc:Name>
+        <cbc:Name>នំបុ័ងសៀមរាម</cbc:Name>
       </cac:PartyName>
       <cac:PostalAddress>
-        <cbc:StreetName>PP</cbc:StreetName>
-        <cbc:AdditionalStreetName/>
-        <cbc:CityName>Phnom Penh</cbc:CityName>
-        <cbc:PostalZone/>
+
+        <cbc:StreetName>Siem Reap</cbc:StreetName>
+        <cbc:CityName>Siem Reap</cbc:CityName>
         <cac:Country>
           <cbc:IdentificationCode>KH</cbc:IdentificationCode>
         </cac:Country>
       </cac:PostalAddress>
       <cac:PartyTaxScheme>
-        <cbc:CompanyID>23144122</cbc:CompanyID>
+        <cbc:CompanyID>K008-0000001</cbc:CompanyID>
         <cac:TaxScheme>
           <cbc:ID>VAT</cbc:ID>
         </cac:TaxScheme>
       </cac:PartyTaxScheme>
       <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="en">NEASARANEW CO., LTD.</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
-      </cac:PartyLegalEntity>
-      <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="km">នាសារ៉ាថ្មី ឯ.ក</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
+        <cbc:RegistrationName languageID="en">Nom Pang Siem Ream</cbc:RegistrationName>
+        <cbc:CompanyID>0005000001</cbc:CompanyID>
       </cac:PartyLegalEntity>
       <cac:Contact>
-        <cbc:Name>Phaney</cbc:Name>
-        <cbc:Telephone>65453322224</cbc:Telephone>
-        <cbc:ElectronicMail>phenpani@gmail.com</cbc:ElectronicMail>
+        <cbc:Telephone>+85503442333</cbc:Telephone>
+        <cbc:ElectronicMail>nompange_siemreap@gmail.com</cbc:ElectronicMail>
       </cac:Contact>
     </cac:Party>
   </cac:AccountingCustomerParty>
-  <cac:PrepaidPayment>
-    <cbc:PaidAmount currencyID="USD">0</cbc:PaidAmount>
-  </cac:PrepaidPayment>
-  <cac:TaxExchangeRate>
-    <cbc:SourceCurrencyCode>USD</cbc:SourceCurrencyCode>
-    <cbc:TargetCurrencyCode>KHR</cbc:TargetCurrencyCode>
-    <cbc:CalculationRate>4064</cbc:CalculationRate>
-  </cac:TaxExchangeRate>
   <cac:TaxTotal>
-    <cbc:TaxAmount currencyID="USD">1</cbc:TaxAmount>
+    <cbc:TaxAmount currencyID="KHR">31600</cbc:TaxAmount>
     <cac:TaxSubtotal>
-      <cbc:TaxableAmount currencyID="USD">10</cbc:TaxableAmount>
-      <cbc:TaxAmount currencyID="USD">1</cbc:TaxAmount>
+      <cbc:TaxableAmount currencyID="KHR">316000</cbc:TaxableAmount>
+      <cbc:TaxAmount currencyID="KHR">31600</cbc:TaxAmount>
       <cac:TaxCategory>
         <cbc:ID>S</cbc:ID>
         <cbc:Percent>10</cbc:Percent>
@@ -126,18 +116,34 @@ Reference:
     </cac:TaxSubtotal>
   </cac:TaxTotal>
   <cac:LegalMonetaryTotal>
-    <cbc:LineExtensionAmount currencyID="USD">10</cbc:LineExtensionAmount>
-    <cbc:TaxExclusiveAmount currencyID="USD">10</cbc:TaxExclusiveAmount>
-    <cbc:TaxInclusiveAmount currencyID="USD">11</cbc:TaxInclusiveAmount>
-    <cbc:PayableAmount currencyID="USD">11</cbc:PayableAmount>
+    <cbc:LineExtensionAmount currencyID="KHR">316000
+    </cbc:LineExtensionAmount>
+    <cbc:TaxExclusiveAmount currencyID="KHR">316000
+    </cbc:TaxExclusiveAmount>
+    <cbc:TaxInclusiveAmount currencyID="KHR">347600
+    </cbc:TaxInclusiveAmount>
+    <cbc:PayableAmount currencyID="KHR">347600</cbc:PayableAmount>
   </cac:LegalMonetaryTotal>
-  <cac:InvoiceLine>
+  <cac:CreditNoteLine>
     <cbc:ID>1</cbc:ID>
-    <cbc:InvoicedQuantity unitCode="none">1</cbc:InvoicedQuantity>
-    <cbc:LineExtensionAmount currencyID="USD">10</cbc:LineExtensionAmount>
+    <cbc:CreditedQuantity unitCode="none">50</cbc:CreditedQuantity>
+    <cbc:LineExtensionAmount currencyID="KHR">316000</cbc:LineExtensionAmount>
+    <cac:TaxTotal>
+      <cbc:TaxAmount currencyID="KHR">31600</cbc:TaxAmount>
+      <cac:TaxSubtotal>
+        <cbc:TaxAmount currencyID="KHR">31600</cbc:TaxAmount>
+        <cac:TaxCategory>
+          <cbc:ID>S</cbc:ID>
+          <cbc:Percent>10</cbc:Percent>
+          <cac:TaxScheme>
+            <cbc:ID>VAT</cbc:ID>
+          </cac:TaxScheme>
+        </cac:TaxCategory>
+      </cac:TaxSubtotal>
+    </cac:TaxTotal>
     <cac:Item>
-      <cbc:Description>item1</cbc:Description>
-      <cbc:Name>item1</cbc:Name>
+      <cbc:Description>អង្ករ</cbc:Description>
+      <cbc:Name>អង្ករ</cbc:Name>
       <cac:ClassifiedTaxCategory>
         <cbc:ID>S</cbc:ID>
         <cbc:Percent>10</cbc:Percent>
@@ -147,8 +153,8 @@ Reference:
       </cac:ClassifiedTaxCategory>
     </cac:Item>
     <cac:Price>
-      <cbc:PriceAmount currencyID="USD">10</cbc:PriceAmount>
+      <cbc:PriceAmount currencyID="KHR">6320</cbc:PriceAmount>
     </cac:Price>
-  </cac:InvoiceLine>
-</Invoice>
+  </cac:CreditNoteLine>
+</CreditNote>
 ```
