--- a/pages/invoice-structure/invoice.mdx
+++ b/pages/invoice-structure/invoice.mdx
@@ -33,92 +33,81 @@ Reference:
 
 ## Sample UBL Invoice 
 ```xml
-<Invoice xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2" xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2" xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2">
+
+<Invoice xmlns:cac="urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2"
+  xmlns:cbc="urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2"
+  xmlns="urn:oasis:names:specification:ubl:schema:xsd:Invoice-2">
   <cbc:UBLVersionID>2.1</cbc:UBLVersionID>
-  <cbc:ID>24030192110</cbc:ID>
-  <cbc:IssueDate>2024-03-05</cbc:IssueDate>
+  <cbc:ID>INV-0000002</cbc:ID>
+  <cbc:IssueDate>2024-06-08</cbc:IssueDate>
+  <cbc:DueDate>2024-07-05</cbc:DueDate>
   <cbc:InvoiceTypeCode listID="UN/ECE 1001 Subset">388</cbc:InvoiceTypeCode>
-  <cbc:DocumentCurrencyCode>USD</cbc:DocumentCurrencyCode>
+  <cbc:DocumentCurrencyCode>KHR</cbc:DocumentCurrencyCode>
   <cac:AccountingSupplierParty>
     <cac:Party>
       <cac:PartyName>
-        <cbc:Name>នាសារ៉ាថ្មី ឯ.ក</cbc:Name>
+        <cbc:Name>អង្ករបាត់ដំបង</cbc:Name>
       </cac:PartyName>
       <cac:PostalAddress>
-        <cbc:StreetName>PP</cbc:StreetName>
-        <cbc:AdditionalStreetName/>
-        <cbc:CityName>Phnom Penh</cbc:CityName>
-        <cbc:PostalZone/>
+        <cbc:StreetName>Battambong</cbc:StreetName>
+        <cbc:CityName>Battambang</cbc:CityName>
         <cac:Country>
           <cbc:IdentificationCode>KH</cbc:IdentificationCode>
         </cac:Country>
       </cac:PostalAddress>
       <cac:PartyTaxScheme>
-        <cbc:CompanyID>23144122</cbc:CompanyID>
+        <cbc:CompanyID>K008-0000002</cbc:CompanyID>
         <cac:TaxScheme>
           <cbc:ID>VAT</cbc:ID>
         </cac:TaxScheme>
       </cac:PartyTaxScheme>
       <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="en">NEASARANEW CO., LTD.</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
-      </cac:PartyLegalEntity>
-      <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="km">នាសារ៉ាថ្មី ឯ.ក</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
+        <cbc:RegistrationName>Angkar Battambong</cbc:RegistrationName>
+        <cbc:CompanyID>0005000002</cbc:CompanyID>
       </cac:PartyLegalEntity>
       <cac:Contact>
-        <cbc:Name>Phaney</cbc:Name>
-        <cbc:Telephone>65453322224</cbc:Telephone>
-        <cbc:ElectronicMail>phenpani@gmail.com</cbc:ElectronicMail>
+        <cbc:Telephone>+8550934534433</cbc:Telephone>
+        <cbc:ElectronicMail>angkar_battambong@gmail.com</cbc:ElectronicMail>
       </cac:Contact>
     </cac:Party>
   </cac:AccountingSupplierParty>
   <cac:AccountingCustomerParty>
     <cac:Party>
       <cac:PartyName>
-        <cbc:Name>នាសារ៉ាថ្មី ឯ.ក</cbc:Name>
+        <cbc:Name>នំបុ័ងសៀមរាម</cbc:Name>
       </cac:PartyName>
       <cac:PostalAddress>
-        <cbc:StreetName>PP</cbc:StreetName>
-        <cbc:AdditionalStreetName/>
-        <cbc:CityName>Phnom Penh</cbc:CityName>
-        <cbc:PostalZone/>
+
+        <cbc:StreetName>Siem Reap</cbc:StreetName>
+        <cbc:CityName>Siem Reap</cbc:CityName>
         <cac:Country>
           <cbc:IdentificationCode>KH</cbc:IdentificationCode>
         </cac:Country>
       </cac:PostalAddress>
       <cac:PartyTaxScheme>
-        <cbc:CompanyID>23144122</cbc:CompanyID>
+        <cbc:CompanyID>K008-0000001</cbc:CompanyID>
         <cac:TaxScheme>
           <cbc:ID>VAT</cbc:ID>
         </cac:TaxScheme>
       </cac:PartyTaxScheme>
       <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="en">NEASARANEW CO., LTD.</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
-      </cac:PartyLegalEntity>
-      <cac:PartyLegalEntity>
-        <cbc:RegistrationName languageID="km">នាសារ៉ាថ្មី ឯ.ក</cbc:RegistrationName>
-        <cbc:CompanyID>1010015172</cbc:CompanyID>
+        <cbc:RegistrationName languageID="en">Nom Pang Siem Ream</cbc:RegistrationName>
+        <cbc:CompanyID>0005000001</cbc:CompanyID>
       </cac:PartyLegalEntity>
       <cac:Contact>
-        <cbc:Name>Phaney</cbc:Name>
-        <cbc:Telephone>65453322224</cbc:Telephone>
-        <cbc:ElectronicMail>phenpani@gmail.com</cbc:ElectronicMail>
+        <cbc:Telephone>+85503442333</cbc:Telephone>
+        <cbc:ElectronicMail>nompange_siemreap@gmail.com</cbc:ElectronicMail>
       </cac:Contact>
     </cac:Party>
   </cac:AccountingCustomerParty>
-  <cac:TaxExchangeRate>
-    <cbc:SourceCurrencyCode>USD</cbc:SourceCurrencyCode>
-    <cbc:TargetCurrencyCode>KHR</cbc:TargetCurrencyCode>
-    <cbc:CalculationRate>4064</cbc:CalculationRate>
-  </cac:TaxExchangeRate>
+  <cac:PrepaidPayment>
+    <cbc:PaidAmount currencyID="KHR">0</cbc:PaidAmount>
+  </cac:PrepaidPayment>
   <cac:TaxTotal>
-    <cbc:TaxAmount currencyID="USD">1</cbc:TaxAmount>
+    <cbc:TaxAmount currencyID="KHR">195700</cbc:TaxAmount>
     <cac:TaxSubtotal>
-      <cbc:TaxableAmount currencyID="USD">10</cbc:TaxableAmount>
-      <cbc:TaxAmount currencyID="USD">1</cbc:TaxAmount>
+      <cbc:TaxableAmount currencyID="KHR">1207000</cbc:TaxableAmount>
+      <cbc:TaxAmount currencyID="KHR">120700</cbc:TaxAmount>
       <cac:TaxCategory>
         <cbc:ID>S</cbc:ID>
         <cbc:Percent>10</cbc:Percent>
@@ -127,31 +116,106 @@ Reference:
         </cac:TaxScheme>
       </cac:TaxCategory>
     </cac:TaxSubtotal>
-  </cac:TaxTotal>
-  <cac:LegalMonetaryTotal>
-    <cbc:LineExtensionAmount currencyID="USD">10</cbc:LineExtensionAmount>
-    <cbc:TaxExclusiveAmount currencyID="USD">10</cbc:TaxExclusiveAmount>
-    <cbc:TaxInclusiveAmount currencyID="USD">11</cbc:TaxInclusiveAmount>
-    <cbc:PrepaidAmount currencyID="USD">0</cbc:PrepaidAmount>
-    <cbc:PayableAmount currencyID="USD">11</cbc:PayableAmount>
-  </cac:LegalMonetaryTotal>
-  <cac:InvoiceLine>
-    <cbc:ID>1</cbc:ID>
-    <cbc:InvoicedQuantity unitCode="none">1</cbc:InvoicedQuantity>
-    <cbc:LineExtensionAmount currencyID="USD">10</cbc:LineExtensionAmount>
-    <cac:Item>
-      <cbc:Description>item1</cbc:Description>
-      <cbc:Name>item1</cbc:Name>
-      <cac:ClassifiedTaxCategory>
+    <cac:TaxSubtotal>
+      <cbc:TaxableAmount currencyID="KHR">500000</cbc:TaxableAmount>
+      <cbc:TaxAmount currencyID="KHR">50000</cbc:TaxAmount>
+      <cac:TaxCategory>
         <cbc:ID>S</cbc:ID>
         <cbc:Percent>10</cbc:Percent>
         <cac:TaxScheme>
-          <cbc:ID>VAT</cbc:ID>
+          <cbc:ID>SP</cbc:ID>
         </cac:TaxScheme>
-      </cac:ClassifiedTaxCategory>
+      </cac:TaxCategory>
+    </cac:TaxSubtotal>
+    <cac:TaxSubtotal>
+      <cbc:TaxableAmount currencyID="KHR">500000</cbc:TaxableAmount>
+      <cbc:TaxAmount currencyID="KHR">25000</cbc:TaxAmount>
+      <cac:TaxCategory>
+        <cbc:ID>S</cbc:ID>
+        <cbc:Percent>5</cbc:Percent>
+        <cac:TaxScheme>
+          <cbc:ID>PLT</cbc:ID>
+        </cac:TaxScheme>
+      </cac:TaxCategory>
+    </cac:TaxSubtotal>
+  </cac:TaxTotal>
+  <cac:LegalMonetaryTotal>
+    <cbc:LineExtensionAmount currencyID="KHR">1132000
+    </cbc:LineExtensionAmount>
+    <cbc:TaxExclusiveAmount currencyID="KHR">1132000
+    </cbc:TaxExclusiveAmount>
+    <cbc:TaxInclusiveAmount currencyID="KHR">1327700
+    </cbc:TaxInclusiveAmount>
+    <cbc:PayableAmount currencyID="KHR">1327700</cbc:PayableAmount>
+  </cac:LegalMonetaryTotal>
+  <cac:InvoiceLine>
+    <cbc:ID>1</cbc:ID>
+    <cbc:InvoicedQuantity unitCode="none">100</cbc:InvoicedQuantity>
+    <cbc:LineExtensionAmount currencyID="KHR">632000</cbc:LineExtensionAmount>
+    <cac:TaxTotal>
+      <cbc:TaxAmount currencyID="KHR">63200</cbc:TaxAmount>
+      <cac:TaxSubtotal>
+        <cbc:TaxAmount currencyID="KHR">63200</cbc:TaxAmount>
+        <cac:TaxCategory>
+          <cbc:ID>S</cbc:ID>
+          <cbc:Percent>10</cbc:Percent>
+          <cac:TaxScheme>
+            <cbc:ID>VAT</cbc:ID>
+          </cac:TaxScheme>
+        </cac:TaxCategory>
+      </cac:TaxSubtotal>
+    </cac:TaxTotal>
+    <cac:Item>
+      <cbc:Description>អង្ករ</cbc:Description>
+      <cbc:Name>អង្ករ</cbc:Name>
     </cac:Item>
     <cac:Price>
-      <cbc:PriceAmount currencyID="USD">10</cbc:PriceAmount>
+      <cbc:PriceAmount currencyID="KHR">6320</cbc:PriceAmount>
+    </cac:Price>
+  </cac:InvoiceLine>
+  <cac:InvoiceLine>
+    <cbc:ID>2</cbc:ID>
+    <cbc:InvoicedQuantity unitCode="none">50</cbc:InvoicedQuantity>
+    <cbc:LineExtensionAmount currencyID="KHR">500000</cbc:LineExtensionAmount>
+    <cac:TaxTotal>
+      <cbc:TaxAmount currencyID="KHR">132500</cbc:TaxAmount>
+      <cac:TaxSubtotal>
+        <cbc:TaxAmount currencyID="KHR">50000</cbc:TaxAmount>
+        <cac:TaxCategory>
+          <cbc:ID>S</cbc:ID>
+          <cbc:Percent>10</cbc:Percent>
+          <cac:TaxScheme>
+            <cbc:ID>SP</cbc:ID>
+          </cac:TaxScheme>
+        </cac:TaxCategory>
+      </cac:TaxSubtotal>
+      <cac:TaxSubtotal>
+        <cbc:TaxAmount currencyID="KHR">25000</cbc:TaxAmount>
+        <cac:TaxCategory>
+          <cbc:ID>S</cbc:ID>
+          <cbc:Percent>5</cbc:Percent>
+          <cac:TaxScheme>
+            <cbc:ID>PLT</cbc:ID>
+          </cac:TaxScheme>
+        </cac:TaxCategory>
+      </cac:TaxSubtotal>
+      <cac:TaxSubtotal>
+        <cbc:TaxAmount currencyID="KHR">57500</cbc:TaxAmount>
+        <cac:TaxCategory>
+          <cbc:ID>S</cbc:ID>
+          <cbc:Percent>10</cbc:Percent>
+          <cac:TaxScheme>
+            <cbc:ID>VAT</cbc:ID>
+          </cac:TaxScheme>
+        </cac:TaxCategory>
+      </cac:TaxSubtotal>
+    </cac:TaxTotal>
+    <cac:Item>
+      <cbc:Description>បារី</cbc:Description>
+      <cbc:Name>បារី</cbc:Name>
+    </cac:Item>
+    <cac:Price>
+      <cbc:PriceAmount currencyID="KHR">10000</cbc:PriceAmount>
     </cac:Price>
   </cac:InvoiceLine>
 </Invoice>
