--- a/pages/getting-started/oauth2.mdx
+++ b/pages/getting-started/oauth2.mdx
@@ -13,7 +13,7 @@ Integrate OAuth 2.0 to securely access services through third-party servers.
 ```http
 POST {BaseURL}/api/v1/configure/configure-redirect-url
 Content-Type: application/json
-Authorization: Basic {encodedClientId:clientSecret}
+Authorization: Basic base64encode({ClientId:clientSecret})
 {
   "white_list_redirect_urls": [
     "http://domain_webhook"
@@ -52,7 +52,7 @@ redirect_url?authToken={authToken}
 Exchange the authToken for access and refresh tokens:
 
 ```http
-POST {BaseURL}/api/v1/auth/connect
+POST {BaseURL}/api/v1/auth/authorize/connect
 Content-Type: application/json
 Authorization: Basic {encodedClientId:clientSecret}
 {
