--- a/pages/getting-started/overview.mdx
+++ b/pages/getting-started/overview.mdx
@@ -5,7 +5,7 @@ Welcome to CamInvoice! This section will guide you through the initial steps to 
 - **Contact Us**: Ensure you have contacted CamInvoice support and obtained your API credentials.
 - **API Credentials**: Keep your client ID and secret key for authentication.
 ### Setup
-- **API Endpoint**: Use the following base URL for all API requests: `https://api.{caminvoice-url}.com` 
+- **API Endpoint**: Use the given base URL for all API requests
 - **Authentication**: Implement OAuth2 authentication using your API key and secret.
 
 ### Next Steps
