--- a/pages/api-reference/caminvoice-member-list.mdx
+++ b/pages/api-reference/caminvoice-member-list.mdx
@@ -1,30 +1,28 @@
 # CamInvoice Member List
 
 ## Description
-This endpoint is used to validate taxpayer information.
+This endpoint is used to list CamInvoice member information by searching for businesses.
 
 ```http
 GET {BaseURL}/api/v1/businesses?keyword={keyword}&limit={limit}
 Content-Type: application/json
-Authorization: "Bearer ${access_token}"
+Authorization: "Bearer {access_token}"
 ```
 
-## Method
-`GET`
-
-## Authentication
-Bearer token authentication is required with the access token provided.
+### Headers
+- **Content-Type**: `application/json`
+- **Authorization**: `Bearer {access_token}`
 
 
-## Request Query
+### Request Query Parameter
 | Field            | Type    | Description                                      |
 |------------------|---------|--------------------------------------------------|
-| keyword        | String   | keyword to search entity                          |
-| limit           | number   | Limit number of businesses
+| keyword        | String   | A keyword to search for entities (e.g., name, TIN, etc.)                    |
+| limit           | number   | The maximum number of businesses to return in the result
 
-## Response
+### Response
+**HTTP Status 200 (OK)**
 
-### HTTP Status 200 (OK)
 Response Array of Business where Business field describe below
 | Field   | Description                                    |
 |---------|------------------------------------------------|
